--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jest": "^28.1.0",
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.13",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "supertest": "^6.2.3"
   }
 }
